refactor: remove LocalTransform, fix common transformDto extensions
